[tool.poetry]
name = "polyaxon_sdk"
version = "2.2.0-rc0"
description = "Polyaxon SDKs and REST API specification."
authors = ["contact@polyaxon.com"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/GIT_REPO_ID/GIT_USER_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "Polyaxon SDKs and REST API specification."]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">= 1.10.5"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=4.4.6"
flake8 = ">=6.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
